--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesomeproject",
+  "name": "banco_mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "expo": "~48.0.15",
+    "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-date-dropdown": "^0.1.0",
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-native": "0.71.8",
+    "react-native-check-box": "^2.1.7",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.18.10",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
